// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Disclosure Closed 1`] = `
<section>
  <header
    aria-controls="🅰1"
    aria-expanded={true}
    className="flex justify-between items-center p-4 md:px-8 md:py-6 text-lg bg-primary text-gray-50"
    role="button"
    style={
      {
        "backgroundColor": "rgba(132, 20, 45, 1)",
        "color": "rgba(249, 250, 251, 1)",
      }
    }
    tabIndex={0}
  >
    <h3>
      ¿Qué es el MakerLab?
    </h3>
    <svg
      className="transition-transform text-xl rotate-0"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
      />
    </svg>
  </header>
  <div
    aria-hidden={false}
    className="overflow-hidden visible"
    id="🅰1"
    style={
      {
        "height": 0,
        "opacity": 1,
        "visibility": "visible",
      }
    }
  >
    <div
      className="p-4 md:p-8 bg-gray-50"
    >
      MakerLab es una comunidad tecnológica que une a varias
    personas con la misma pasión de aprender y enseñar.
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Disclosure Open 1`] = `
<section>
  <header
    aria-controls="🅰0"
    aria-expanded={false}
    className="flex justify-between items-center p-4 md:px-8 md:py-6 text-lg bg-slate-100 text-zinc-900"
    role="button"
    style={
      {
        "backgroundColor": "rgba(248, 250, 252, 1)",
        "color": "rgba(24, 24, 27, 1)",
      }
    }
    tabIndex={0}
  >
    <h3>
      ¿Qué es el MakerLab?
    </h3>
    <svg
      className="transition-transform text-xl rotate-180"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
      />
    </svg>
  </header>
  <div
    aria-hidden={true}
    className="overflow-hidden visible"
    id="🅰0"
    style={
      {
        "height": 0,
        "opacity": 0,
        "visibility": "hidden",
      }
    }
  >
    <div
      className="p-4 md:p-8 bg-gray-50"
    >
      MakerLab es una comunidad tecnológica que une a varias
    personas con la misma pasión de aprender y enseñar.
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/SocialNav Default 1`] = `
<div
  className="bg-primary text-gray-50 inline-flex flex-col py-3 gap-1"
>
  <a
    href="https://www.facebook.com/makerlabperu"
    rel="noopener"
    role="button"
    target="_blank"
  >
    <svg
      className="mx-4 my-3"
      fill="currentColor"
      height={21}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 320 512"
      width={21}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
      />
    </svg>
  </a>
  <a
    href="https://www.linkedin.com/company/makerlab-per%C3%BA"
    rel="noopener"
    role="button"
    target="_blank"
  >
    <svg
      className="mx-4 my-3"
      fill="currentColor"
      height={21}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 448 512"
      width={21}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
      />
    </svg>
  </a>
  <a
    href="https://www.youtube.com/channel/UCGzB0HrShJYiy_JwWB4zcgg"
    rel="noopener"
    role="button"
    target="_blank"
  >
    <svg
      className="mx-4 my-3"
      fill="currentColor"
      height={21}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 576 512"
      width={21}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
      />
    </svg>
  </a>
  <a
    href="https://twitter.com/makerlab_peru"
    rel="noopener"
    role="button"
    target="_blank"
  >
    <svg
      className="mx-4 my-3"
      fill="currentColor"
      height={21}
      stroke="currentColor"
      strokeWidth="0"
      style={
        {
          "color": undefined,
        }
      }
      viewBox="0 0 512 512"
      width={21}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
      />
    </svg>
  </a>
</div>
`;
